# awesome-engineering-research

./: .gitignore  CONTRIBUTING.md  README.md  TRIAGE.md
knowledge-based-skills/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  mise.toml  pyproject.toml
knowledge-based-skills/.firecrawl/: moonrepo.dev-docs-concepts-toolchain.md  moonrepo.dev-docs-concepts-workspace.md  moonrepo.dev-docs-config-extensions.md  moonrepo.dev-docs-config-overview.md  moonrepo.dev-docs-config-template.md  moonrepo.dev-docs-config-toolchain.md  moonrepo.dev-docs-config.md  moonrepo.dev-docs-create-project.md  moonrepo.dev-docs-create-task.md  moonrepo.dev-docs-editors-vscode.md  moonrepo.dev-docs-editors.md  moonrepo.dev-docs-faq.md  moonrepo.dev-docs-guides-codegen.md  moonrepo.dev-docs-guides-codeowners.md  moonrepo.dev-docs-guides-daemon.md  moonrepo.dev-docs-guides-debug-task.md  moonrepo.dev-docs-guides-docker.md  moonrepo.dev-docs-guides-examples-angular.md  moonrepo.dev-docs-guides-examples-astro.md  moonrepo.dev-docs-guides-examples-eslint.md  moonrepo.dev-docs-guides-examples-jest.md  moonrepo.dev-docs-guides-examples-nest.md  moonrepo.dev-docs-guides-examples-next.md  moonrepo.dev-docs-guides-examples-nuxt.md  moonrepo.dev-docs-guides-examples-packemon.md  moonrepo.dev-docs-guides-examples-prettier.md  moonrepo.dev-docs-guides-examples-react.md  moonrepo.dev-docs-guides-examples-remix.md  moonrepo.dev-docs-guides-examples-solid.md  moonrepo.dev-docs-guides-examples-storybook.md  moonrepo.dev-docs-guides-examples-sveltekit.md  moonrepo.dev-docs-guides-exec-plan.md  (+73 more)
(+447 files in other folders)
