[project]
name = "moondocs"
version = "0.1.0"
description = "moon docs -> typed knowledge graph PoC"
requires-python = ">=3.12"
dependencies = [
    "falkordb==1.6.1",
    "fastembed==0.8.0",
    "markdown-it-py==4.2.0",
    "pydantic==2.13.4",
    "python-dotenv==1.0.1",
    "typer==0.25.1",
    "rich==15.0.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.scripts]
moondocs = "moondocs.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moondocs"]
